--- a/OfficeDungeonCrawler/OfficeDungeonCrawler/OfficeDungeonCrawler.csproj
+++ b/OfficeDungeonCrawler/OfficeDungeonCrawler/OfficeDungeonCrawler.csproj
@@ -79,11 +79,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\EnemyMovement.cs" />
+    <Compile Include="Assets\Scripts\FlashWhenHurt.cs" />
     <Compile Include="Assets\Scripts\Health.cs" />
+    <Compile Include="Assets\Scripts\HealthBar.cs" />
     <Compile Include="Assets\Scripts\Hitbox.cs" />
     <Compile Include="Assets\Scripts\PlayerAttack.cs" />
     <Compile Include="Assets\Scripts\PlayerMovement.cs" />
     <Compile Include="Assets\Scripts\Settings.cs" />
+    <Compile Include="Assets\Scripts\StaplerAttack.cs" />
     <Compile Include="Assets\Scripts\TimedDeath.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
